@@ -1,3 +1,8 @@
+Fri Mar 26 09:02:50 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>
+
+        * tests/run_test.pl:
+          Added -l option which allows to run tests selectively.
+
 Wed Mar 24 07:17:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * bin/fuzz.pl:
